Made seeders idempotent, Makefile and .env.example changes
remp/remp#1317

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@
 #    docker-compose up -d
 
 # Use `echo $(id -u ${USER})` to get UID of your host user.
-UID: 1000
+UID=1000
 # Use `echo $(id -g ${USER})` to get GID of your host user
-GID: 1000
+GID=1000
 # Name of the host user (so the container uses same username).
-UNAME: docker
+UNAME=docker
