Add NullTracker into config.local.neon.example
MailerModule's config now requires implementation of ITracker. Requirement
added to app/config/config.neon by 8e1b0cf293a7ae9ce0334d2d7584792733ec305e.

If you have Beam enabled, use `Remp\MailerModule\Models\Tracker\Remp`.

Fixes error:

  ```
  Nette\DI\ServiceCreationException:
  Service 'hermesWorker' (type of Remp\MailerModule\Commands\HermesWorkerCommand):
  Service of type Remp\MailerModule\Models\Tracker\ITracker required by $tracker
  in Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler::__construct() not
  found. Did you add it to configuration file? (used in @hermesWorker::add())
  ```

--- a/Mailer/app/config/config.local.neon.example
+++ b/Mailer/app/config/config.local.neon.example
@@ -93,6 +93,9 @@ services:
 
     # If you are using REMP Beam, enable Tracker (parameters are loaded from .env)
 #    - Remp\MailerModule\Models\Tracker\Remp(%remp.beam.tracker_addr%, %remp.beam.tracker_property_token%)
+    # otherwise keep NullTracker enabled
+    # (ITracker implementation is required by UnsubscribeInactiveUsersCommand initialized by MailerModule)
+    - Tests\Unit\NullTracker
 
 #    eventDispatcher:
 #        factory: League\Event\EventDispatcher
