--- a/Campaign/.env.example
+++ b/Campaign/.env.example
@@ -263,3 +263,8 @@ MAXMIND_DATABASE=resources/assets/maxmind/GeoLite2-Country.mmdb
 # If you are not using the one time banners, set this option to `false` for better performance.
 # The default value is `true`.
 ONE_TIME_BANNER_ENABLED=true
+
+# To enable Campaign debugger, set here a random password. After that, Campaign debugger can be
+# enabled on any frontend page including Campaign remplib by adding "#debugCampaign" hash to URL.
+# Debugger will ask for this password when debugging a campaign.
+CAMPAIGN_DEBUG_KEY=
