--- a/Campaign/package.json
+++ b/Campaign/package.json
@@ -41,6 +41,7 @@
         "eonasdan-bootstrap-datetimepicker": "^4.17.49",
         "global": "^4.3.2",
         "google-material-color": "^1.3.1",
+        "interactjs": "^1.10.26",
         "jquery": "3.6.0",
         "jquery-placeholder": "^2.3.1",
         "jquery-typeahead": "^2.11",
