Added new Respekt url parser generator
respekt#159
- Added `type` to `Remp\MailerModule\Models\PageMeta\Meta`
- Added `RespektApiTransport` for transport from respekt GraphQL api
- Added form, widget and generator for Respekt url parser generator
- Added env configuration for Respekt api

--- a/Mailer/.env.example
+++ b/Mailer/.env.example
@@ -101,3 +101,7 @@ SEARCH_MAX_RESULT_COUNT=5
 TEMPLATE_EDITOR=codemirror
 
 WEB_ADDR=
+
+# Respekt content meta information
+RESPEKT_CONTENT_URL=
+RESPEKT_CONTENT_TOKEN=
