Add option to track variant subscriptions to Tracker
remp/web#2404

--- a/Mailer/app/config/config.neon
+++ b/Mailer/app/config/config.neon
@@ -31,4 +31,5 @@ services:
 	hermesWorker:
 		setup:
 			- add('user-subscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
+			- add('user-subscribed-variant', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
 			- add('user-unsubscribed', Remp\MailerModule\Hermes\TrackSubscribeUnsubscribeHandler())
