Add RespektArticleGenerator, update RespektContent to include full content
- Added `RespektArticleGenerator.`
  - Generator which accepts single article URL. Should be used for
    emails containing single article (eg. Newsletter).
- Updated `RespektContent`.
  - Object `RespektMeta` returned from `RespektContent` now contains also
    `fullContent` field with whole article (and not only first paragraph).
  - Links, images and `interTitle` child type are now also processed.
- Added error when incorrect ContentInterface is configured for Respekt
  generators or incorrect TransportApiInterface is set for RespektContent.

Co-Authored-By: Peter Dulacka <dulacka@gmail.com>

remp/respekt#192

--- a/Mailer/app/config/config.local.neon.example
+++ b/Mailer/app/config/config.local.neon.example
@@ -123,6 +123,22 @@ services:
 #		setup:
 #			- addDomain('dennikn.sk')
 
+# configuration required by Respekt's URL parser generators
+# (this is whole configuration; merge it with your existing configuration (other generators)
+#	generator:
+#		factory: Remp\MailerModule\Models\Generators\GeneratorFactory
+#		setup:
+#			- registerGenerator('respekt_url_parser', 'Respekt URL parser', \Remp\Mailer\Models\Generators\RespektUrlParserGenerator(\Remp\Mailer\Models\PageMeta\Content\RespektContent()))
+#			- registerGenerator('respekt_article', 'Respekt article', \Remp\Mailer\Models\Generators\RespektArticleGenerator(\Remp\Mailer\Models\PageMeta\Content\RespektContent()))
+#
+#	respektUrlParserTemplateFormFactory:
+#		setup:
+#			- setLayoutCode('layout-code')
+#			- setDefaultMailTypeCode('mail-type-code')
+#	transporter:
+#		factory: Remp\Mailer\Models\PageMeta\Transport\RespektApiTransport(%respekt.content_url%, %respekt.content_token%)
+# (END) configuration required by Respekt's URL parser generators
+
 # local_configs override DBs configs records.
 local_configs:
 
