Add mobile concurrents percentage to Beam dashboard
Mobile percentage is calculated from number of non-Computer
devices stored in concurrents index in Elasticsearch.
Change in Telegraf configuration is required to whitelist
"derived_ua_device" to the index.

remp/remp#1352

--- a/Docker/telegraf/telegraf.conf
+++ b/Docker/telegraf/telegraf.conf
@@ -81,8 +81,8 @@
   # namepass = ["pageviews"]
   manage_template = false
   id_field = "browser_id"
-  updated_fields = ["time", "article_id", "token", "derived_referer_host_with_path", "derived_referer_medium", "url", "canonical_url"]
-  field_whitelist = ["time", "article_id", "token", "derived_referer_host_with_path", "derived_referer_medium", "url", "canonical_url"]
+  updated_fields = ["time", "article_id", "token", "derived_referer_host_with_path", "derived_referer_medium", "url", "canonical_url", "derived_ua_device"]
+  field_whitelist = ["time", "article_id", "token", "derived_referer_host_with_path", "derived_referer_medium", "url", "canonical_url", "derived_ua_device"]
 
 [[outputs.remp_elasticsearch]]
   alias = "entities"
