Fix config paths, make sure configs are always published
remp/remp#1287

--- a/Campaign/composer.json
+++ b/Campaign/composer.json
@@ -69,7 +69,7 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover",
-            "@php artisan vendor:publish --tag=campaign-assets"
+            "@php artisan vendor:publish --tag=campaign-assets --force"
         ]
     },
     "config": {
