Refactored banner color schemes to banners config file
remp/remp#1379
+ Fixed color contrasts on campaign banners

--- a/Campaign/.gitignore
+++ b/Campaign/.gitignore
@@ -28,4 +28,5 @@ npm-error.log
 /config/services.remp.php
 /config/search.php
 /config/banners.php
+/config/banners.local.php
 /config/newsletter_banners.php
