Update Mailer's dependencies, add Composer audit to CI flow

--- a/Mailer/Makefile
+++ b/Mailer/Makefile
@@ -45,6 +45,9 @@ latte-lint:
 composer-install-dev:
 	composer install
 
+composer-audit:
+	composer audit --locked --abandoned=report
+
 composer-install:
 	composer install --optimize-autoloader --no-dev
 
