Added option to specify api version for gender balance
remp/helpdesk#3303

--- a/Beam/.env.example
+++ b/Beam/.env.example
@@ -204,3 +204,4 @@ GENDER_BALANCE_ENABLED=false
 
 AZURE_COMPUTER_VISION_ENDPOINT=
 AZURE_COMPUTER_VISION_API_KEY=
+AZURE_COMPUTER_VISION_API_VERSION=
