Update Laravel to v9
- Framework update in all applications and in shared library.
- Remove airbrake/errbit support.
- Remove trustedproxy.php in favor of TrustProxies middleware.
- Add PHPstan with level 3 support.

remp/remp#1409

--- a/Beam/Makefile
+++ b/Beam/Makefile
@@ -60,6 +60,9 @@ docker-build:
 	@cd $(SUB_TRACKER) && make docker-build
 	@cd $(SUB_SEGMENTS) && make docker-build
 
+phpstan:
+	php vendor/bin/phpstan analyse --configuration=phpstan.neon --memory-limit=1G
+
 sniff:
 	php vendor/bin/phpcs --standard=PSR2 ${PHP_FOLDERS} -n -p
 
