--- a/Beam/composer.json
+++ b/Beam/composer.json
@@ -48,13 +48,13 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "barryvdh/laravel-ide-helper": "^2.10",
-        "facade/ignition": "^2.5",
         "fakerphp/faker": "^v1.20.0",
         "friendsofphp/php-cs-fixer": "^3.0",
+        "larastan/larastan": "^2.0",
         "laravel/tinker": "^2.5",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3",
+        "spatie/laravel-ignition": "^1.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
