--- a/Sso/composer.json
+++ b/Sso/composer.json
@@ -36,10 +36,8 @@
         "php": "^8.1",
         "ext-json": "*",
         "arrilot/laravel-widgets": "3.13.1",
-        "fideloper/proxy": "^4.4",
-        "kouz/laravel-airbrake": "^0.7",
         "laracasts/flash": "^3.2",
-        "laravel/framework": "^8.42",
+        "laravel/framework": "^9.0",
         "laravel/socialite": "^5.2",
         "laminas/laminas-diactoros": "^2.5",
         "laravelcollective/html": "^6.2",
@@ -63,13 +61,14 @@
         "barryvdh/laravel-debugbar": "^3.7",
         "barryvdh/laravel-ide-helper": "^2.10",
         "beyondcode/laravel-dump-server": "^1.7",
-        "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "filp/whoops": "^2.12",
         "friendsofphp/php-cs-fixer": "^3.0",
+        "larastan/larastan": "^2.0",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "9.3.11",
+        "spatie/laravel-ignition": "^1.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
