Fixed inline banner selector
remp/remp#1406
- Fixed image assets links.
- Replaced old (not functional) unmaintained css selector finder library.

--- a/Campaign/extensions/campaign-module/package.json
+++ b/Campaign/extensions/campaign-module/package.json
@@ -53,7 +53,7 @@
     "moment-timezone": "^0.4.0 || ^0.5.0",
     "node-waves": "^0.7.6",
     "nouislider": "^13.1.5",
-    "optimal-select": "^4.0.1",
+    "@medv/finder": "^4.0.2",
     "rison": "^0.1.1",
     "salvattore": "^1.0.9",
     "vue": "^2.7",
