--- a/Sso/.env.example
+++ b/Sso/.env.example
@@ -102,6 +102,13 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
 
+# Memory limits for each command (run via scheduler) in case you want to raise default limit.
+# The expected format is comma-delimited list of command::limit
+#
+#    conversions:aggregate-events::512M,segments:compute-author-segments::128M
+#
+#COMMANDS_MEMORY_LIMITS=
+
 # Controls command overlaping expiration in minutes (default: 15)
 #COMMANDS_OVERLAPPING_EXPIRES_AT=
 
