Campaign: Update Laravel to v11
remp/remp#1409

--- a/Campaign/.env.example
+++ b/Campaign/.env.example
@@ -129,6 +129,13 @@ REMP_SSO_ADDR=http://sso.remp.press
 # URL where user is redirected if SSO login fails
 REMP_SSO_ERROR_URL=http://campaign.remp.press/error
 
+# Memory limits for each command (run via scheduler) in case you want to raise default limit.
+# The expected format is comma-delimited list of command::limit
+#
+#    conversions:aggregate-events::512M,segments:compute-author-segments::128M
+#
+#COMMANDS_MEMORY_LIMITS=
+
 # Controls command overlaping expiration in minutes (default: 15)
 #COMMANDS_OVERLAPPING_EXPIRES_AT=
 
