--- a/Campaign/Makefile
+++ b/Campaign/Makefile
@@ -54,3 +54,6 @@ update-prod: composer-install js
 	php artisan migrate --force
 	php artisan config:cache
 	php artisan route:cache
+
+schema-dump:
+	php artisan schema:dump --path=extensions/campaign-module/database/schema/mysql-schema.sql
