--- a/Campaign/composer.json
+++ b/Campaign/composer.json
@@ -30,14 +30,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
-        "barryvdh/laravel-ide-helper": "^2.10",
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "^3.0",
         "josiasmontag/laravel-redis-mock": "~1.2",
-        "larastan/larastan": "^2.0",
+        "larastan/larastan": "^3.3",
         "laravel/tinker": "^2.0",
         "mockery/mockery": "^1.4.2",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^11.0",
         "spatie/laravel-ignition": "^2.9",
         "squizlabs/php_codesniffer": "^3.6"
     },
@@ -69,7 +69,8 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover",
-            "@php artisan vendor:publish --tag=campaign-assets --force"
+            "@php artisan vendor:publish --tag=campaign-assets --force",
+            "@php artisan service:post-install"
         ]
     },
     "config": {
