--- a/Sso/composer.json
+++ b/Sso/composer.json
@@ -36,15 +36,14 @@
         "php": "^8.2",
         "ext-json": "*",
         "ans-group/laravel-health-check": "^2.0",
-        "arrilot/laravel-widgets": "3.13.1",
+        "arrilot/laravel-widgets": "^3.13",
         "laracasts/flash": "^3.2",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^12.0",
         "laravel/socialite": "^5.2",
-        "laminas/laminas-diactoros": "^2.5",
+        "laminas/laminas-diactoros": "^3.5",
         "league/uri": "^7.5",
         "league/uri-components": "^7.5",
-        "php-amqplib/php-amqplib": "^2.12",
-        "predis/predis": "^1.1",
+        "predis/predis": "^2.3",
         "remp/laravel-helpers": "*",
         "remp/laravel-sso": "*",
         "remp/laravel-widgets": "*",
@@ -52,7 +51,7 @@
         "spatie/laravel-html": "^3.12",
         "symfony/psr-http-message-bridge": "^7.2",
         "tymon/jwt-auth": "^2.0",
-        "yajra/laravel-datatables-oracle": "^11.0",
+        "yajra/laravel-datatables-oracle": "^12.0",
         "laravel/tinker": "^2.5",
         "guzzlehttp/guzzle": "^7.0.1"
     },
@@ -66,7 +65,7 @@
         "larastan/larastan": "^3.3",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "11.0",
+        "phpunit/phpunit": "^12.0",
         "spatie/laravel-ignition": "^2.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
@@ -94,7 +93,7 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover",
+            "@php artisan package:discover --ansi",
             "@php artisan service:post-install"
         ]
     },
