Beam: Update Laravel to v12
remp/remp#1409

--- a/Beam/phpstan.neon
+++ b/Beam/phpstan.neon
@@ -5,7 +5,7 @@ includes:
 parameters:
     paths:
         - app/
-        - extensions/beam-module/src
+#        - extensions/beam-module/src
     level: 3
     databaseMigrationsPath:
         - database/migrations/
