--- a/Beam/composer.json
+++ b/Beam/composer.json
@@ -36,7 +36,7 @@
         "larastan/larastan": "^3.3",
         "laravel/tinker": "^2.5",
         "mockery/mockery": "^1.4.2",
-        "phpunit/phpunit": "^11.0",
+        "phpunit/phpunit": "^12.0",
         "spatie/laravel-ignition": "^2.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
@@ -61,7 +61,7 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover",
+            "@php artisan package:discover --ansi",
             "@php artisan vendor:publish --tag=beam-assets --force",
             "@php artisan service:post-install"
         ]
