Campaign: Update Laravel to v12
remp/remp#1409

--- a/Campaign/phpstan.neon
+++ b/Campaign/phpstan.neon
@@ -5,6 +5,7 @@ includes:
 parameters:
     paths:
         - app/
+#        - extensions/campaign-module/src/
     level: 3
     databaseMigrationsPath:
         - database/migrations/
