--- a/Campaign/composer.json
+++ b/Campaign/composer.json
@@ -37,7 +37,7 @@
         "larastan/larastan": "^3.3",
         "laravel/tinker": "^2.0",
         "mockery/mockery": "^1.4.2",
-        "phpunit/phpunit": "^11.0",
+        "phpunit/phpunit": "^12.0",
         "spatie/laravel-ignition": "^2.9",
         "squizlabs/php_codesniffer": "^3.6"
     },
@@ -68,7 +68,7 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover",
+            "@php artisan package:discover --ansi",
             "@php artisan vendor:publish --tag=campaign-assets --force",
             "@php artisan service:post-install"
         ]
