--- a/Campaign/extensions/campaign-module/composer.json
+++ b/Campaign/extensions/campaign-module/composer.json
@@ -9,18 +9,18 @@
     "php": "^8.2",
     "ext-intl": "*",
     "ext-json": "*",
-    "cache/predis-adapter": "^1.0",
-    "cache/redis-adapter": "^1.2",
     "doctrine/dbal": "^3.1",
     "fico7489/laravel-pivot": "^3.0",
     "geoip2/geoip2": "~3.1",
     "guzzlehttp/guzzle": "^7.0.1",
+    "kodus/predis-simple-cache": "^2.1",
     "laracasts/flash": "^3.2",
-    "laravel/framework": "^v11.0",
+    "laravel/framework": "^v12.0",
     "laravel/serializable-closure": "^2.0",
     "matomo/device-detector": "^6.4",
+    "matthiasmullie/scrapbook": "^1.5",
     "nicolaslopezj/searchable": "^1.13",
-    "predis/predis": "^1.1",
+    "predis/predis": "^2.3",
     "remp/laravel-helpers": "*",
     "remp/laravel-sso": "*",
     "remp/laravel-widgets": "*",
@@ -31,7 +31,7 @@
     "symfony/psr-http-message-bridge": "^7.2",
     "tightenco/ziggy": "^2.5",
     "ans-group/laravel-health-check": "^2.0",
-    "yajra/laravel-datatables-oracle": "^11.0"
+    "yajra/laravel-datatables-oracle": "^12.0"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.7",
@@ -43,7 +43,7 @@
     "laravel/tinker": "^2.0",
     "mockery/mockery": "^1.4.2",
     "nunomaduro/collision": "^8.1",
-    "phpunit/phpunit": "^11.0",
+    "phpunit/phpunit": "^12.0",
     "squizlabs/php_codesniffer": "^3.6"
   },
   "suggest": {
@@ -66,8 +66,6 @@
         "Remp\\CampaignModule\\CampaignServiceProvider",
         "Remp\\CampaignModule\\Providers\\BeamSegmentsServiceProvider",
         "Remp\\CampaignModule\\Providers\\CrmSegmentServiceProvider",
-        "Remp\\CampaignModule\\Providers\\DeviceDetectorServiceProvider",
-        "Remp\\CampaignModule\\Providers\\PythiaSegmentsServiceProvider",
         "Remp\\CampaignModule\\Providers\\ShowtimeServiceProvider",
         "Remp\\CampaignModule\\Providers\\StatsServiceProvider"
       ]
