Campaign: Fix PHPStan level 4 issues
remp/remp#1409

--- a/Campaign/phpstan.neon
+++ b/Campaign/phpstan.neon
@@ -5,9 +5,16 @@ includes:
 parameters:
     paths:
         - app/
-#        - extensions/campaign-module/src/
+        - extensions/campaign-module/
     level: 3
     databaseMigrationsPath:
         - database/migrations/
         - extensions/campaign-module/database/migrations/
+    configDirectories:
+        - config/
+        - extensions/campaign-module/config/
     excludePaths:
+    ignoreErrors:
+        -
+            message: "#Called 'env' outside of the config directory which returns null when the config is cached, use 'config'.#"
+            path: extensions/campaign-module/public/showtime.php
