Beam impressions tracking
remp/remp#1228

--- a/Docker/telegraf/telegraf.conf
+++ b/Docker/telegraf/telegraf.conf
@@ -28,6 +28,17 @@
   tagexclude = ["host"]
 
 [[outputs.remp_elasticsearch]]
+  alias = "impressions"
+  urls = ["http://elasticsearch:9200"] # required
+  timeout = "5s"
+  index_name = "impressions"
+  namepass = ["impressions"]
+  added_fields = ["element_ids"]
+  manage_template = false
+  tagexclude = ["host"]
+  id_field = "remp_pageview_id_block_type"
+
+[[outputs.remp_elasticsearch]]
   alias = "timespent"
   urls = ["http://elasticsearch:9200"] # required
   timeout = "5s"
