--- a/Campaign/extensions/campaign-module/package.json
+++ b/Campaign/extensions/campaign-module/package.json
@@ -26,14 +26,14 @@
   "packageManager": "yarn@2.4.3",
   "dependencies": {
     "@babel/core": "^7.0",
-    "@remp/js-commons": "2.3.1",
+    "@remp/js-commons": "^2.4",
     "animate.css": "^3.7.0",
     "autosize": "^4.0.2",
     "bootstrap": "^3.4.1",
     "bootstrap-notify": "^3.1.3",
     "bootstrap-select": "^1.13.9",
     "bootstrap-sweetalert": "^1.0.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "^4.4",
     "core-js": "^3.8.1",
     "datatables.net": "^1.10.25",
     "datatables.net-responsive": "^2.2.9",
