--- a/Beam/.env.example
+++ b/Beam/.env.example
@@ -205,3 +205,7 @@ GENDER_BALANCE_ENABLED=false
 AZURE_COMPUTER_VISION_ENDPOINT=
 AZURE_COMPUTER_VISION_API_KEY=
 AZURE_COMPUTER_VISION_API_VERSION=
+
+GORSE_RECOMMENDATION_ENDPOINT=
+GORSE_RECOMMENDATION_API_KEY=
+GORSE_RECOMMENDATION_URL_FILER=
