Add campaign:seed-events command for generating test statistics
Generates realistic banner events (shows, clicks, purchases) with
proper conversion rates for testing campaign statistics dashboard.

remp/remp#1440

--- a/Campaign/.env.example
+++ b/Campaign/.env.example
@@ -43,7 +43,6 @@ LOG_CHANNEL=stack
 # with CSS class "remp-banner") highlighted so you can select and use them to display the banner in.
 CLIENT_SITE_URL=
 
-
 #####################
 ## SQL database connection details. MySQL (and derivates) are supported and tested.
 
@@ -65,7 +64,6 @@ DB_PASSWORD=secret
 
 # Port to be used to connect to database. 3306 is the default port used by MySQL and its derivates.
 DB_PORT=3306
-
 
 #####################
 ## Redis connection details
@@ -151,10 +149,12 @@ REMP_SSO_ERROR_URL=http://campaign.remp.press/error
 ## Default is 5.
 # REMP_SEGMENTS_TIMEOUT=
 
+# Beam Tracker API address for sending banner events
+REMP_TRACKER_ADDR=http://beam_tracker:8081
+
 # API token to authenticate against other REMP services using default SSO configuration.
 # The default configuration of REMP tools always uses API token generated in SSO, you can grab your token there.
 REMP_SSO_API_TOKEN=
-
 
 #####################
 ## Airbrake / Errbit
