--- a/Mailer/package.json
+++ b/Mailer/package.json
@@ -11,7 +11,11 @@
     "watch": "cross-env MAILER_MODULE_PATH=extensions/mailer-module mix watch --mix-config=extensions/mailer-module/webpack.mix.js",
     "watch-poll": "cross-env MAILER_MODULE_PATH=extensions/mailer-module mix watch --mix-config=extensions/mailer-module/webpack.mix.js -- --watch-options-poll=1000",
     "hot": "cross-env MAILER_MODULE_PATH=extensions/mailer-module mix watch --hot --mix-config=extensions/mailer-module/webpack.mix.js",
-    "production": "cross-env MAILER_MODULE_PATH=extensions/mailer-module mix --production --mix-config=extensions/mailer-module/webpack.mix.js"
+    "production": "cross-env MAILER_MODULE_PATH=extensions/mailer-module mix --production --mix-config=extensions/mailer-module/webpack.mix.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "engines": {
     "node": ">=18",
@@ -24,15 +28,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0",
+    "@vitejs/plugin-vue2": "^2.3.4",
+    "@vitest/ui": "^1.0.0",
+    "@vue/test-utils": "^1.3.6",
     "cross-env": "^7.0",
     "css-loader": "^5.2.6",
+    "happy-dom": "^12.10.0",
     "laravel-mix": "^6.0",
     "postcss": "^8.2.8",
     "resolve-url-loader": "^3.1",
     "sass": "^1.17.4",
     "sass-loader": "^10.0",
+    "vitest": "^1.0.0",
+    "vue": "^2.7",
     "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.6.14",
+    "vue-template-compiler": "^2.7.16",
     "webpack": "^5.0.0"
   },
   "resolutions": {
