--- a/Mailer/package.json
+++ b/Mailer/package.json
@@ -28,9 +28,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0",
-    "@vitejs/plugin-vue2": "^2.3.4",
+    "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/ui": "^1.0.0",
-    "@vue/test-utils": "^1.3.6",
+    "@vue/server-renderer": "^3.4",
+    "@vue/test-utils": "^2.4.0",
     "cross-env": "^7.0",
     "css-loader": "^5.2.6",
     "happy-dom": "^12.10.0",
@@ -40,9 +41,8 @@
     "sass": "^1.17.4",
     "sass-loader": "^10.0",
     "vitest": "^1.0.0",
-    "vue": "^2.7",
-    "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.7.16",
+    "vue": "^3.5",
+    "vue-loader": "^17.0.0",
     "webpack": "^5.0.0"
   },
   "resolutions": {
