Change user_id to uuid in recommender data
remp/crm#3617

--- a/Beam/.env.example
+++ b/Beam/.env.example
@@ -209,3 +209,6 @@ AZURE_COMPUTER_VISION_API_VERSION=
 GORSE_RECOMMENDATION_ENDPOINT=
 GORSE_RECOMMENDATION_API_KEY=
 GORSE_RECOMMENDATION_URL_FILER=
+
+CRM_ADDR=
+CRM_API_KEY=
