Fix Go apps build process
The build could use different version of Goa (the latest)
for generating the code than the one listed in the go.mod
file (currently 3.16.1).

If there was a breaking change between the listed and
the latest version, the build would be failing.

remp/remp#1104

--- a/Beam/go/cmd/segments/Makefile
+++ b/Beam/go/cmd/segments/Makefile
@@ -25,7 +25,7 @@ clean:
 
 gen:
 	set -e
-	go install goa.design/goa/v3/cmd/goa@v3
+	go install goa.design/goa/v3/cmd/goa@$$(go list -m -f '{{.Version}}' goa.design/goa/v3)
 	goa gen $(DESIGN_PKG) --output .
 
 build-static: gen
